--- a/nosotros.html
+++ b/nosotros.html
@@ -789,6 +789,7 @@
         <!-- Two Column Layout -->
         <div class="two-column-section animate-on-scroll">
             <div class="image-column">
+                <img src="img/directora.jpg" alt="Descripción de la imagen" />
                 <span>Imagen</span>
             </div>
             <div class="text-column">
