--- a/admision.html
+++ b/admision.html
@@ -573,7 +573,7 @@
      <body class="cuerpo-pagina">
     <header class="encabezado-principal">
         <div class="contenedor-navegacion">
-            <h1 class="titulo-imagen">Imagen</h1>
+            <h1 class="titulo-imagen"><img src="" alt=""></h1>
             <h2 class="titulo-presentacion">Presentación</h2>
         </div>
     </header>
@@ -581,7 +581,7 @@
     <main class="seccion-contenido">
         <div class="contenedor-presentacion">
             <div class="caja-imagen">
-                Lorem Ipsum
+                <img src="" alt="">
             </div>
             <div class="contenido-texto">
                 <p class="parrafo-descripcion">
