--- a/index.html
+++ b/index.html
@@ -777,6 +777,7 @@
                     <li><a href="nivelesEdu.html">Niveles educativos</a></li>
                     <li><a href="admision.html">Admisión</a></li>
                     <li><a href="actividades.html">Actividades</a></li>
+                    <li><a href="blog.html">Actividades</a></li>
                 </ul>
             </div>
         </div>
